    on Sequence)
  - better quoting of identifiers when manipulating schemas
  - standardized the behavior for table reflection where types can't be located;
    NullType is substituted instead, warning is raised.
  - ColumnCollection (i.e. the 'c' attribute on tables) follows dictionary
    semantics for "__contains__" [ticket:606]
    
- engines
  - Connections gain a .properties collection, with contents scoped to the
    lifetime of the underlying DBAPI connection
- extensions
  - proxyengine is temporarily removed, pending an actually working
    replacement.
  - SelectResults has been replaced by Query.  SelectResults / 
    SelectResultsExt still exist but just return a slightly modified
    Query object for backwards-compatibility.  join_to() method 
    from SelectResults isn't present anymore, need to use join(). 
- postgres
  - Added PGArray datatype for using postgres array datatypes
- oracle
  - very rudimental support for OUT parameters added; use sql.outparam(name, type)
    to set up an OUT parameter, just like bindparam(); after execution, values are
    avaiable via result.out_parameters dictionary. [ticket:507]

0.3.11
- orm
    - added a check for joining from A->B using join(), along two
      different m2m tables.  this raises an error in 0.3 but is 
      possible in 0.4 when aliases are used. [ticket:687]
- mssql
    - added support for TIME columns (simulated using DATETIME) [ticket:679]
    - index names are now quoted when dropping from reflected tables [ticket:684]
      
0.3.10
- general
    - a new mutex that was added in 0.3.9 causes the pool_timeout
      feature to fail during a race condition; threads would 
      raise TimeoutError immediately with no delay if many threads 
      push the pool into overflow at the same time.  this issue has been
      fixed.
- sql
  - got connection-bound metadata to work with implicit execution
  - foreign key specs can have any chararcter in their identifiers
   [ticket:667]